# awq

./: .awqignore  .gitignore  AwqEditor.cpp  AwqEditor.hpp  CMakeLists.txt  Cargo.toml  README.md  awq.yml  main.cpp  struct.txt
src/: ask.rs  main.rs
src/commit/: mod.rs
src/net/: mod.rs
src/pyamid/: mod.rs
src/run/: mod.rs
src/run/c/: mod.rs
src/run/cmake/: mod.rs
src/run/go/: mod.rs
src/run/nodejs/: mod.rs
src/run/rust/: mod.rs
src/widgets/: mod.rs  search.rs  search_result.rs
src/widgets/awq/: base.rs
templates/: commit.txt
templates/api/: changes.txt
