[package]
name = "awq"
version = "0.0.1"
authors = ["hackia"]
edition = "2021"
description = "Web utilitities"
readme = "README.md"
homepage = "https://github.com/hackia/awq/wiki"
repository = "https://github.com/hackia/awq"
license = "AGPL -3.0"
keywords = ["automation", "cli", "hacking", "security", "web"]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
hex = "0.4.3"
ignore = "0.4.23"
indicatif = "0.17.11"
infer = "0.19.0"
inquire = { version = "0.7.5", features = [
    "chrono",
    "console",
    "date",
    "editor",
] }
is_executable = "1.0.4"
num_cpus = "1.16.0"
orx-tree = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tabled = "0.18.0"