[package]
name = "awq"
version = "0.0.1"
authors = ["hackia"]
edition = "2021"
description = "Web utilitities"
readme = "README.md"
homepage = "https://github.com/hackia/awq/wiki"
repository = "https://github.com/hackia/awq"
license = "AGPL -3.0"
keywords = ["automation", "cli", "hacking", "security", "web"]

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.0-alpha.2" }
reqwest = "0.12.15"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
